# ToyC_cp

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
doc/: git.md  optimization-opportunities.md  optimization-report.md
doc/perf/: baseline.md  任务分发.md
doc/report/: 实践报告.md
doc/skill/: README.md  compiler-build-lessons.md  differential-testing-with-spike.md  perf-measurement-pitfalls.md  register-allocation.md  riscv32-codegen.md
doc/tests/: 测试文档.md
runtime/: link.ld  start.S
src/: main.cpp
src/ast/: AST.h
src/codegen/: CodeGen.cpp  CodeGen.h  OptCodeGen.cpp  Regs.h
src/ir/: IR.h  IRGen.cpp  IRGen.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/opt/: Passes.cpp  Passes.h  RegAlloc.cpp  RegAlloc.h
src/parser/: Parser.cpp  Parser.h
src/sema/: Sema.cpp  Sema.h
tests/: bench.sh  bench_focus.sh  bench_icount.sh  bench_nonopt.sh  bench_opt_baseline.sh  bench_p03_p08.sh  focused_icount_base.sh  fuzz.py  run_opt_compare.sh  run_tests.sh
tests/bench/: arith.tc  bench_call_intensive.tc  bench_matrix.tc  bench_reg_pressure.tc  bench_sort.tc  divmod.tc  fib.tc  helper_loop.tc  nested.tc  p01_const.tc  p02_dead_code.tc  p03_copy.tc  p04_common_subexpr.tc  p05_algebra.tc  p06_tail_recursion.tc  p07_loop.tc  p08_basic_combined.tc  p09_advanced_graph.tc  p10_advanced_matrix.tc  p11_global_const_prop.tc  p12_const_expr_chain.tc
tests/cases/: ackermann.tc  arith.tc  chain_calls.tc  const_chain_init.tc  const_expr_complex.tc  const_global_init.tc  continue_skip_incr.tc  dead_after_return.tc  dead_code_complex.tc  deep_nesting_scope.tc  fib.tc  (+46 more)
